Refactor AI module structure and configuration